--- a/styles.css
+++ b/styles.css
@@ -91,27 +91,29 @@ input {
   background-color: #0077B5;
   padding: 30px 0;
 }
-.header .logo-responsive {
+
+.logo-responsive {
   display: none;
 }
-.header .header-items {
+
+.header-items {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
 }
-.header .header-items .header-menu {
+.header-items .header-menu {
   display: flex;
   gap: 2vw;
 }
-.header .header-items .header-menu .header-menu-item {
+.header-items .header-menu .header-menu-item {
   color: #ffffff;
   font-weight: 600;
   font-size: var(1rem);
   padding: 10px;
   position: relative;
 }
-.header .header-items .header-menu .header-menu-item:hover::after {
+.header-items .header-menu .header-menu-item:hover::after {
   content: "";
   display: block;
   width: 0;
@@ -122,14 +124,14 @@ input {
   transition: width 0.3s;
   width: 100%;
 }
-.header .header-items .header-menu .btn-outline {
+.header-items .header-menu .btn-outline {
   background: 0 0;
   color: #ffffff;
   border: 2px solid #ffffff;
   padding: 10px 30px;
   text-transform: uppercase;
 }
-.header .header-items .header-menu .btn-primary {
+.header-items .header-menu .btn-primary {
   background: #ffffff;
   color: #0077B5;
   border: 0;
@@ -137,7 +139,8 @@ input {
   font-weight: 800;
   text-transform: uppercase;
 }
-.header .logo a {
+
+.logo a {
   color: #ffffff;
   font-size: clamp(1rem, 1rem + 0.5vw, 1.5rem);
   display: flex;
@@ -146,10 +149,10 @@ input {
   justify-content: center;
   cursor: default;
 }
-.header .logo a span {
+.logo a span {
   margin-left: 2px;
 }
-.header .logo a:hover span {
+.logo a:hover span {
   color: #ff5902;
   transition: width 0.3s;
 }
@@ -591,7 +594,6 @@ footer .bottom-details .bottom_text a {
     width: 100%;
   }
   .header {
-    height: 9vh;
     padding: 0 24px;
     border-bottom-left-radius: 1%;
     border-bottom-right-radius: 1%;
