--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -3,6 +3,7 @@ footer {
     padding: 50px 0;
     font-size: 100%;
     background-color: $bg-tertiary;
+    border-top: 4px solid $color-quaternary;
   
     &::before {
       content: '';
@@ -40,6 +41,13 @@ footer {
             position: relative;
             text-transform: uppercase;
           }
+
+          p {
+            font-size: $fs-5;
+            line-height: 1.6;
+            color:$color-secondary;
+            margin-bottom: 20px;
+          }
   
           ul {
             list-style: none;
@@ -67,8 +75,8 @@ footer {
           // Estilização do formulário de contato dentro do bloco
           .form-sub {
             label {
-              color: #ffffff;
-              font-size: max(14px, 0.8vw);
+              color: $color-secondary;
+              font-size: $fs-5;
             }
   
             input {
