--- a/styles.scss
+++ b/styles.scss
@@ -8,4 +8,4 @@
 @import "assets/scss/components/projects";
 @import "assets/scss/components/contacts";
 @import "assets/scss/components/footer";
-@import "assets/scss/components/mediaqueries"
+@import "assets/scss/components/mediaqueries";
